Fixed the layout issue in features

--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ body {
     }
 
     .bento-tilt_1 {
-        @apply relative border-hsla col-span-2 overflow-hidden rounded-md transition-transform duration-300 ease-out;
+        @apply relative border-white/20 overflow-hidden rounded-md transition-transform duration-300 ease-out;
     }
 
     .bento-tilt_2 {
